[tool.poetry]
name = "enso_test"
version = "0.1.0"
description = ""
authors = ["Benjamin Ye <benjamin.ye@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7.3"
python-dateutil = "^2.8.1"
boto3 = "^1.16.45"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
rope = "^0.18.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
